test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/test_attr.sw
library;

#[test]
fn ok_1() { }

#[test()]
fn ok_2() { }

#[test(should_revert)]
fn ok_3() { }

#[test(should_revert, should_revert)]
fn not_ok_1() { }